Align progress bar correctly

--- a/assets/css/setup-wizard.css
+++ b/assets/css/setup-wizard.css
@@ -81,14 +81,20 @@ body.wpo-wcpdf-setup form {
 	overflow: hidden;
 	list-style: none;
 	box-sizing: border-box;
-	padding: 0 7.8% 0 0;
+	padding: 0;
 }
 
 .wpo-progress-bar li {
-	width: 14.285%;
+	width: 12.5%;
 	float: left;
 	box-sizing: border-box;
 	position: relative;
+	padding: 0;
+	margin: 0;
+}
+
+.wpo-progress-bar li:first-child {
+	width: calc( ( 12.5% - ( 12.5% - 35px ) ) / 2 + 12.5% );
 }
 
 .wpo-progress-bar li::after {
@@ -102,7 +108,7 @@ body.wpo-wcpdf-setup form {
 	right: 0;
 }
 
-.wpo-progress-bar a:first-child li::after {
+.wpo-progress-bar li:first-child::after {
 	display: none;
 }
 
